# Real-time-Object-Detection-System-Based-on-ARM

./: README.md  asyncnoti.c  sht20_i2c_driver.c  v4l2_camera.c  video_v4l2_camera.c
FastestDet_NCNN-master/: CMakeLists.txt  CMakeLists.txt.bak  arm_linux_setup.cmake  cscope.in.out  cscope.out  cscope.po.out  cur_ctags.sh  tags
FastestDet_NCNN-master/src/: FastestDet.cpp  FastestDet.cpp.myine  Look_FastestDet.cpp
realtek/rtl8189FS/os_dep/linux/: ioctl_cfg80211.c
